Add temp fix for clientId issue, cleanup